<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Screen 1 - welcome screen -->
    <string name="app_name">Plenty Of Dog</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcomeTo">Welcome to</string>
    <string name="PlentyOfDog">Plenty of Dog</string>
    <string name="WhatsYourName">Let\'s start with your name</string>
    <string name="next">Next</string>
    <string name="title_activity_profile_build">ProfileBuild</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="password2">Confirm Password</string>
    <string name="FirstTime">Since this is your first time, lets build yourself a profile</string>
    <string name="version">Version 1.0</string>

    <!-- Screen 2 profile builder -->
    <string name="LetsBuildYourProfile">Lets build your profile!</string>
    <string name="Age">Age</string>
    <string name="Hometown">Hometown</string>
    <string name="YOE">Experience</string>
    <string name="Gender">Gender</string>
    <string name="Email">Email</string>
    <string name="Phone">Phone #</string>
    <string name="description">Short description of yourself</string>
    <string name="title_activity_dog_filter">Dog Filter</string>
    <string name="User_Profile">User Profile</string>

    <string-array name="gender_type">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="xp_lvl">
        <item>Beginner</item>
        <item>Amateur</item>
        <item>Experienced</item>
        <item>Professional</item>
    </string-array>

    <!-- Screen 3 Pick your favourites -->
    <string name="AnyParticularDog">Preferences</string>
    <string name="NoPreference">No preference</string>
    <string name="size">Size</string>
    <string name="temperament">Temperament</string>
    <string name="hair">Hair Type</string>
    <string name="smallDog">Small</string>
    <string name="mediumDog">Medium</string>
    <string name="largeDog">Large</string>
    <string name="shortHaired">Short-haired</string>
    <string name="longHaired">Long-haired</string>
    <string name="mellow">Mellow</string>
    <string name="hyper">Hyper</string>
    <string name="title_activity_splash">Splash</string>
    <string name="save">Save</string>

    <!-- Home Screen -->
    <string name="home">Home Screen</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="set_preferences">Set preferences</string>
    <string name="start_browsing">Start Browsing!</string>
    <string name="check_matches">Check Matches!</string>
    <string name="my_dogs">My dogs</string>

    <!-- Set Dog Preferences -->
    <string name="shortTip">Short tip ...</string>
    <string name="title_activity_dog_selection">Dog Selection</string>
    <string name="skip">Skip</string>

    <!-- Dog Browser -->
    <string name="settings">Settings</string>
    <string name="NO">NO</string>
    <string name="YES">YES</string>
    <string name="title_activity_home_screen">Home Screen</string>
    <string name="title_activity_dog_builder">Dog Builder</string>

    <!-- Dog Builder -->
    <string name="dog_showcase">Showcase your Dog!</string>
    <string name="dog_name">Name</string>
    <string name="dog_breed">Breed</string>
    <string name="training">Training</string>
    <string name="activityLevel">Activity level</string>
    <string name="dog_description">Description</string>
    <string name="Upload">Upload</string>
    <string name="fileName">File Name: </string>

    <string-array name="breeds">
        <item>Corgi</item>
        <item>Retriever</item>
        <item>Shiba</item>
        <item>Samoyed</item>
        <item>Chow</item>
        <item>Pug</item>
        <item>Bulldog</item>
        <item>Rottweiler</item>
        <item>Husky</item>
        <item>Terrier</item>
        <item>Other</item>
    </string-array>
    <string-array name="temperaments">
        <item>No Preference</item>
        <item>Mellow</item>
        <item>Hyper</item>
    </string-array>
    <string-array name="sizes">
        <item>No Preference</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string-array name="hairtypes">
        <item>No Preference</item>
        <item>Short-haired</item>
        <item>Long-haired</item>
    </string-array>

    <string name="back">Back</string>
    <string name="update">Update</string>
    <string name="title_activity_log_on_sign_up">Plenty Of Dog Log in</string>
    <string name="title_activity_image_uploader">Image Uploader</string>
    <string name="title_activity_my_dogs">My Dogs</string>
    <string name="title_activity_profile_change">Profile Changer</string>
    <string name="ChangeYourProfileHere">Change your profile here</string>
    <string name="title_activity_view_profile">view_profile</string>
    <string name="reject">Reject</string>

</resources>
