
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".WelcomeScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight=".2"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="40dip"
            android:text="@string/LetsBuildYourProfile"
            android:id="@+id/lblWelcomeTo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight=".05"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Age"
            android:id="@+id/lblAge" />

        <EditText
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight=".7"
            android:gravity="center"
            android:id="@+id/ageInput" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight=".05"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Hometown"
            android:gravity="center"
            android:id="@+id/lblHometown" />

        <EditText
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight=".7"
            android:gravity="center"
            android:id="@+id/hometownInput"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight=".05"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/YOE"
            android:gravity="center"
            android:id="@+id/lblYOE" />

        <Spinner
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight=".7"
            android:gravity="center"
            android:entries="@array/xp_lvl"
            android:id="@+id/yoeInput"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".05"
        android:orientation="vertical"
        android:id="@+id/linearLayout4" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/description"
            android:id="@+id/textView3" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/shortDesc"
            android:gravity="center"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight=".1"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/btnNext"
            android:layout_gravity="right"
            android:onClick="dogPicker"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight=".1"
        android:orientation="horizontal">
    </LinearLayout>
</LinearLayout>

