<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dtran.plentyofdog.home_screen"
    >
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="80dp"
    android:background="#ff7bd2f3"
    android:paddingBottom="20px"
    android:id="@+id/relLayout2">
    <TextView
        android:text="@string/home"
        android:textStyle="bold"
        android:textSize="50dip"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:textColor="#fefefe"
        android:background="#ff7bd2f3"/>
</RelativeLayout>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:id="@+id/edit_profile"
        android:textColor="#fefefe"
        android:background="#ff7bd2f3"

        android:textSize="30sp"
        android:onClick="changeProfile"
        android:layout_below="@+id/relLayout2"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_preferences"
        android:id="@+id/set_preferences"
        android:textColor="#fefefe"
        android:background="#ff7bd2f3"
        android:textSize="30sp"
        android:onClick="setPreference"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/edit_profile"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_browsing"
        android:id="@+id/start_browsing"
        android:onClick="dogBrowse"
        android:textColor="#fefefe"
        android:background="#ff7bd2f3"
        android:textSize="30sp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/set_preferences"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_dogs"
        android:id="@+id/my_dogs"
        android:onClick="myDogs"
        android:textColor="#fefefe"
        android:background="#ff7bd2f3"
        android:textSize="30sp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/start_browsing"/>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
android:background="#ff7bd2f3"
    android:layout_marginTop="5dp"
    android:layout_below="@+id/my_dogs"
    android:id="@+id/weirdThing">
    <TextView
        android:text="My matches"
        android:textStyle="bold"
        android:textSize="40dip"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/my_matches"
        android:textColor="#fefefe"
        android:background="#ff7bd2f3"
        android:layout_marginTop="10dp"/>
</RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weirdThing">
    <ListView
        android:id="@+id/list"
        android:layout_below="@+id/weirdThing"
        android:layout_width="match_parent"
        android:layout_weight=".5"
        android:layout_height="wrap_content" >
    </ListView>
    <ListView
        android:id="@+id/list2"
        android:layout_below="@+id/weirdThing"
        android:layout_toRightOf="@+id/list"
        android:layout_width="wrap_content"

        android:layout_weight=".5"
        android:layout_height="wrap_content" >
    </ListView>
    </LinearLayout>
</RelativeLayout>
