
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".WelcomeScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight=".1"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:id="@+id/btnSettings" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight=".5"
        android:orientation="horizontal"
        android:weightSum="1">




    </LinearLayout>

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight=".1"
        android:orientation="horizontal"
       android:weightSum="1">
       <Button
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/NO"
           android:id="@+id/btnNo"
           android:onClick="no" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/YES"
            android:id="@+id/btnYes"
            android:onClick="yes" />


       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dip"
           android:layout_weight=".3"
           android:orientation="vertical"
           android:weightSum="1">

       <LinearLayout
           android:orientation="vertical"
           android:layout_width="290dp"
           android:layout_height="match_parent"
           android:layout_weight="0.85">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textAppearance="?android:attr/textAppearanceMedium"
               android:id="@+id/phDogName" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textAppearance="?android:attr/textAppearanceMedium"
               android:id="@+id/phOwner" />
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textAppearance="?android:attr/textAppearanceMedium"
               android:id="@+id/phBreed" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textAppearance="?android:attr/textAppearanceMedium"
               android:id="@+id/phInterest" />
       </LinearLayout>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/lblDogDesc" />
   </LinearLayout>
</LinearLayout>

